# gen/http/openapi.yaml
@@ -42,7 +42,7 @@ paths:
             type: array
             items:
               type: string
-              example: Itaque similique et consectetur quis quia quos.
+              example: Quos dolor.
       schemes:
       - http
   /api/facts/random:
@@ -64,7 +64,7 @@ paths:
             type: array
             items:
               type: string
-              example: Sed rerum quibusdam perspiciatis dignissimos molestias qui.
+              example: Rerum quibusdam perspiciatis dignissimos molestias qui unde.
         "400":
           description: Bad Request response.
           schema:
@@ -85,8 +85,32 @@ paths:
       schemes:
       - http
       - https
+  /static/{path}:
+    get:
+      tags:
+      - goatfacts
+      summary: Download ./static
+      operationId: goatfacts#/static/{*path}
+      parameters:
+      - name: path
+        in: path
+        description: Relative file path
+        required: true
+        type: string
+      responses:
+        "200":
+          description: File downloaded
+          schema:
+            type: file
+        "404":
+          description: File not found
+          schema:
+            $ref: '#/definitions/Error'
+      schemes:
+      - http
+      - https
 definitions:
-  GoatfactsRandomFactsBadRequestResponseBody:
+  Error:
     title: 'Mediatype identifier: application/vnd.goa.error; view=default'
     type: object
     properties:
@@ -116,9 +140,54 @@ definitions:
         type: boolean
         description: Is the error a timeout?
         example: true
+    description: Error response result type (default view)
+    example:
+      fault: true
+      id: 123abc
+      message: parameter 'p' must be an integer
+      name: bad_request
+      temporary: false
+      timeout: false
+    required:
+    - name
+    - id
+    - message
+    - temporary
+    - timeout
+    - fault
+  GoatfactsRandomFactsBadRequestResponseBody:
+    title: 'Mediatype identifier: application/vnd.goa.error; view=default'
+    type: object
+    properties:
+      fault:
+        type: boolean
+        description: Is the error a server-side fault?
+        example: false
+      id:
+        type: string
+        description: ID is a unique identifier for this particular occurrence of the
+          problem.
+        example: 123abc
+      message:
+        type: string
+        description: Message is a human-readable explanation specific to this occurrence
+          of the problem.
+        example: parameter 'p' must be an integer
+      name:
+        type: string
+        description: Name is the name of this class of errors.
+        example: bad_request
+      temporary:
+        type: boolean
+        description: Is the error temporary?
+        example: true
+      timeout:
+        type: boolean
+        description: Is the error a timeout?
+        example: true
     description: RandomFacts_BadRequest_Response_Body result type (default view)
     example:
-      fault: false
+      fault: true
       id: 123abc
       message: parameter 'p' must be an integer
       name: bad_request
